uppost, add filter by price
