# apis/product/productApi.js
@@ -20,6 +20,18 @@ productApi.get('/', (req,res,next) => {
     })
 
 })
+productApi.get('/filter/by-price/', (req,res,next) => {
+    let {minPrice,maxPrice,productsPerPage,pageNumber,orderType,search} = req.query;
+    productService
+    .getFilterByPrice(minPrice,maxPrice,productsPerPage,pageNumber,orderType,search)
+    .then(listProduct => {
+        return res.status(200).json({status:200,message:"Success",data: listProduct})
+    })
+    .catch(err=>{
+        return res.status(500).json({status:500,message: err})
+    })
+
+})
 productApi.get('/get-by-category-id/:category_id', (req,res,next) => {
     
     let {category_id} = req.params
